Fix donate button size issues on IE

--- a/themes/newgimp/static/css/gimp.css
+++ b/themes/newgimp/static/css/gimp.css
@@ -223,6 +223,8 @@ nav#menu ul > li:last-of-type {
 
 .donate-type > img {
     vertical-align: middle;
+    display: inline;
+    width: 16px;
 }
 
 .donate-type > i {
